fix(image-banner) : fix image banner settings, add subtitle schema, fix background animation, align text content

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -383,18 +383,6 @@
   }
 }
 
-.banner::after,
-.banner__media::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  background: #000000;
-  opacity: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
-
 .banner__box > * + .banner__text {
   margin-top: 1.5rem;
 }
@@ -489,4 +477,9 @@
   .banner--desktop-transparent .rte a:hover {
     color: currentColor;
   }
+}
+
+
+.banner .media{
+  background: var(--gradient-background);
 }
